Card text alignment fix

--- a/src/components/ChefsRestaurantCard/ChefsRestaurantCard.module.scss
+++ b/src/components/ChefsRestaurantCard/ChefsRestaurantCard.module.scss
@@ -68,6 +68,7 @@
         font-weight: 400;
         line-height: 21px;
         letter-spacing: 2.6700000762939453px;
+        text-align: center;
 
         @include smallDesktopScreen {
           font-family: Helvetica Neue;
